<resources>
    <string name="app_name">Petagram</string>
    <string name="nombre_mascota">Mascota 1</string>
    <string name="cantidad_like">5</string>
    <!-- item del menu  -->
    <string name="menu_contact">Contacto</string>
    <string name="menu_about">Acerca de</string>
    <!-- Activity de Bibliografia  -->
    <string name="titulo_biblio">Bibliografía</string>
    <string name="nombre_biblio">Josué Rocafuerte</string>
    <string name="telefono_biblio">098613XXXX</string>
    <string name="correo_biblio">jrocafueXXXX@XXXX.com</string>
    <!-- Activity Formulario  -->
    <string name="correo_formulario">Correo</string>
    <string name="mensaje_formulario">Mensaje</string>
    <string name="nom_formulario">Nombre</string>
    <string name="boton_formulario">Enviar Comentario</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>

