<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_bibliografia_desarrollador"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.prueba.mascotas.BibliografiaDesarrollador">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_biblio"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="@dimen/titulo_biblio"/>

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombre_biblio"
        android:textSize="@dimen/titulo_biblio"/>

    <TextView
        android:id="@+id/tvCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/correo_biblio"
        android:textSize="@dimen/contenido_biblio"/>
    <TextView
        android:id="@+id/tvTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/telefono_biblio"
        android:textSize="@dimen/contenido_biblio"/>


</LinearLayout>
